[package]
name = "wipfs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.50.0"
shuttle-runtime = "0.50.0"
tokio = "1.26.0"
chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
async-trait = "0.1.85"
num_cpus = "1.16.0"
shuttle-shared-db = { version = "0.52.0", features = ["diesel-async-bb8", "postgres"] }
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
cloud-storage = "0.11.1"
ureq = "3.0.3"
bundler = { git = "https://github.com/weaveVM/bundler", branch = "main" }
uuid = "1.12.1"
form_urlencoded = "1.2.1"
enum-as-inner = "0.6.1"
shuttle-diesel-async = { git = "https://github.com/aumetra/shuttle-diesel-async", version = "0.1.0", features = ["bb8", "deadpool"] }
